Added default stylesheet and index page.
Also added placeholders for additional pages.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,43 @@
-<html>
-	<body>
-		Hello DBC!
-	</body>
+<!DOCTYPE html>
+<html> 
+
+<head>
+	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheet.css">
+	<title>Welcome to Wonderful World of Danny.</title>
+</head>
+<body>
+
+<div id = "header">
+
+<div id = "navigationBar">
+<ul>
+  <li><a href = "blog/index.html">Blog</a></li>
+  <li><a href = "projects.html">Projects</a></li>
+  <li><a href = "resources.html">Resources</a></li>
+</ul>
+</div>
+	<div id="pic"><img src="blog/me.jpg" alt="Me!"/>  </div>	
+	<div id="name">Danny's DBC Diary</div>
+
+</div>
+
+
+<div id = "aboutMe">
+Hello!  My name is Danny Lundy.  I'm an Ohio native and graduate of The Ohio State University.  I currently hold a Master's Degree in Chemical and Biomolecular Engineering, but I am currently studying to become a web developer at DevBootCamp.  I'm very excited to be starting this new chapter of my life, and this website will help me share that journey with you.
+
+In case you're wondering, my dog's name is Spaghetti.
+</div>
+
+<div id="Contact">
+<a href="mailto:lundydr@gmail.com">Email me @ lundydr@gmail.com</a>
+<a href="https://www.linkedin.com/lundydr">My Linkedin Profile</a>
+<a href="http://www.twitter.com/lundydr">Follow me on Twitter!</a>
+</div>
+
+<div id = "footer"></div>  
+  
+</body>
+
+
 </html>
