--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 
 <head>
-	<link rel="shortcut icon" href="../stylesheets/favicon.ico"/>
+	<link rel="shortcut icon" href="stylesheets/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheet.css">
 	<title>Welcome to Wonderful World of Danny.</title>
