--- a/projects.html
+++ b/projects.html
@@ -2,8 +2,9 @@
 <html> 
 
 <head>
-	<link rel="stylesheet" type="text/css" href="stylesheets\default.css">
-	<link rel="stylesheet" type="text/css" href="stylesheets\blog-stylesheet.css">
+	<link rel="shortcut icon" href="stylesheets/favicon.ico"/>
+	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheet.css">
 	<title>Welcome to Wonderful World of Danny.</title>
 </head>
 <body>
