Added link to cheat sheet in resources page

--- a/resources.html
+++ b/resources.html
@@ -24,9 +24,9 @@
 </div>
 
 
-<div id = "content">
-	coming soon!
-</div>
+<section>
+	<a href="cheat-sheet.html">Looping in JavaScript vs Ruby</a>
+</section>
 
 
 <div id = "footer"></div>  
