--- a/index.html
+++ b/index.html
@@ -7,38 +7,84 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheet.css">
 	<title>Welcome to Wonderful World of Danny.</title>
 </head>
+
 <body>
 
-<div id = "header">
+<header>
+Daniel R. Lundy
+</header>
 
-<div id = "navigationBar">
-<ul>
-  <li><a href = "blog/index.html">Blog</a></li>
-  <li><a href = "projects.html">Projects</a></li>
-  <li><a href = "resources.html">Resources</a></li>
-</ul>
+<div ID="content">
+<nav>
+	<ul>
+		<li>Home</li>
+		<li><a href = "projects.html">Projects</a></li>
+  		<li><a href = "resources.html">Resources</a></li>
+  	</ul>
+</nav>
+
+<div ID="bio">
+	<p><img src="blog/me.jpg" alt="Me!" title="Remind me to get one without the dawg later." class="align-left"/>
+	Hello!  My name is Danny Lundy.  I'm an Ohio native and graduate of The Ohio State University. I currently hold a Master's Degree in Chemical and Biomolecular Engineering, but I am currently studying to become a web developer at DevBootCamp.  I'm very excited to be starting this new chapter of my life, and this website will help me share that journey with you.
+
+	In case you're wondering, my dog's name is Spaghetti. More to come later.
+
+
+
+
+
+
+	<a href="mailto:lundydr@gmail.com">Email me @ lundydr@gmail.com</a>
+	<a href="https://www.linkedin.com/lundydr">My Linkedin Profile</a>
+	<a href="http://www.twitter.com/lundydr">Follow me on Twitter!</a>
+	</p>
 </div>
-	<div id="pic"><img src="blog/me.jpg" alt="Me!"/>  </div>	
-	<div id="name">Danny's DBC Diary</div>
+
+<aside>
+	<p>Danny's DBC Diary</p>
+	<ul>
+		<li>2015</li>
+			<ul>
+				<li>February</li>
+					<ul>
+						<li>February 22 - Professional</li>
+						<li>February 22 - Cultural</li>
+						<li><a href="blog/t8-tech.html">February 15 - Technical</a></li>
+						<li><a href="blog/c8-conflict.html">February 15 - Cultural</a></li>
+						<li><a href="blog/t7-JavaScript.html">February 18 - Technical</a></li>
+						<li><a href="blog/c7-values.html">February 18 - Cultural</a></li>
+						<li><a href="blog/t6-oop-concepts.html">February 1 - Technical</a></li>
+						<li><a href="blog/c6-stereotype-threat.html">February 1 - Cultural</a></li>				
+					</ul>
+				<li>January</li>
+					<ul>
+						<li><a href="blog/t5-ruby-classes.html">January 25 - Technical</a></li>
+						<li><a href="blog/c5-feedback.html">January 25 - Cultural</a></li>
+						<li><a href="blog/t4-enumerable-methods.html">January 18 - Technical</a></li>
+						<li><a href="blog/c4-tech-issues.html">January 18 - Cultrual</a></li>
+						<li><a href="blog/t3-arrays-hashes.html">January 11 - Technical</a></li>
+						<li><a href="blog/c3-thinking-style.html">January 11 - Cultural</a></li>
+						<li><a href="blog/t2-css-design.html">January 4 - Technical</a></li>
+					</ul>
+			</ul>
+		<li>2014</li>
+			<ul>
+				<li>December</li>
+					<ul>
+						<li><a href="blog/t1-git-blog.html">December 14 - Technical</a></li>
+						<li><a href="blog/c1-chefs-kitchen.html">December 14 -Cultural</a></li>
+					</ul>
+
+			</ul>
+	</ul>
+</aside>
 
 </div>
 
+<footer>
+	&copy; 2015 Daniel R. Lundy
+</footer>
 
-<div id = "aboutMe">
-Hello!  My name is Danny Lundy.  I'm an Ohio native and graduate of The Ohio State University.  I currently hold a Master's Degree in Chemical and Biomolecular Engineering, but I am currently studying to become a web developer at DevBootCamp.  I'm very excited to be starting this new chapter of my life, and this website will help me share that journey with you.
-
-In case you're wondering, my dog's name is Spaghetti.
-</div>
-
-<div id="Contact">
-<a href="mailto:lundydr@gmail.com">Email me @ lundydr@gmail.com</a>
-<a href="https://www.linkedin.com/lundydr">My Linkedin Profile</a>
-<a href="http://www.twitter.com/lundydr">Follow me on Twitter!</a>
-</div>
-
-<div id = "footer"></div>  
-  
 </body>
-
 
 </html>
