--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ Daniel R. Lundy
 			<ul>
 				<li>February</li>
 					<ul>
-						<li>February 22 - Professional</li>
+						<li><a href="p1-new-site.html">February 22 - Professional</a></li>
 						<li>February 22 - Cultural</li>
-						<li><a href="blog/t8-tech.html">February 15 - Technical</a></li>
-						<li><a href="blog/c8-conflict.html">February 15 - Cultural</a></li>
+						<li>February 15 - Technical</a></li>
+						<li>February 15 - Cultural</a></li>
 						<li><a href="blog/t7-JavaScript.html">February 18 - Technical</a></li>
 						<li><a href="blog/c7-values.html">February 18 - Cultural</a></li>
 						<li><a href="blog/t6-oop-concepts.html">February 1 - Technical</a></li>
